--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -999,8 +999,14 @@ section,
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
+
+.contact {
+  --background-color: color-mix(in srgb, var(--accent-color), transparent 95%);
+}
+
 .contact .info-wrap {
   box-shadow: 0px 0px 20px color-mix(in srgb, var(--default-color), transparent 90%);
+
   padding: 30px;
 }
 
